@@ -9,6 +9,9 @@ change to godot 4.4.1
 - improve template by using _unhaled_inout instead of _input, fixing a few input bugs
 - default args
 
+under the hood
+- move instruction argument interpreting parser-side. this shrinks files down a bit and gets rid of a bit of code duplication since inline calls were interpreted at runtime already. regular instructions now just follow suit.
+
 
 -------------------------------------------------
 DIISIS 0.5.1 2025-03-18
